force-app/main/default/objects/Knowledge__kav/fields/CaseDescription__c.field-meta.xml
<CustomField>
    <fullName>CaseDescription__c</fullName>
    <description>Set default text for the Description field on a new ticket.</description>
    <inlineHelpText>Enter default content for users when they log a new ticket related to this article. The field can be blank, or instructional, such as “Describe your issue or request...</inlineHelpText>
    <label>Case Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>