force-app/main/default/objects/Knowledge__kav/fields/Innova_Category__c.field-meta.xml
<CustomField>
    <fullName>Innova_Category__c</fullName>
    <label>Category</label>
    <length>30</length>
    <type>Text</type>
</CustomField>