force-app/main/default/objects/Knowledge__kav/fields/Innova_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Innova_Created_By__c</fullName>
    <label>Created By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>