force-app/main/default/objects/Knowledge__kav/fields/Innova_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Innova_Subcategory__c</fullName>
    <label>Subcategory</label>
    <length>30</length>
    <type>Text</type>
</CustomField>