force-app/main/default/objects/Knowledge__kav/fields/Innova_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Innova_Validation_Status__c</fullName>
    <label>Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Validated</fullName>
                <default>true</default>
                <label>Not Validated</label>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>