force-app/main/default/objects/Knowledge__kav/fields/RelatedCase__c.field-meta.xml
<CustomField>
    <fullName>RelatedCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Knowledge</relationshipLabel>
    <relationshipName>Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>