force-app/main/default/objects/Knowledge__kav/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>