force-app/main/default/objects/Knowledge__kav/fields/Workaround__c.field-meta.xml
<CustomField>
    <fullName>Workaround__c</fullName>
    <label>Workaround</label>
    <length>255</length>
    <type>Text</type>
</CustomField>