force-app/main/default/objects/Knowledge__kav/recordTypes/KnownError.recordType-meta.xml
<RecordType>
    <fullName>KnownError</fullName>
    <active>true</active>
    <label>Known Error</label>
</RecordType>