force-app/main/default/objects/Knowledge__kav/recordTypes/ServiceKnowledge.recordType-meta.xml
<RecordType>
    <fullName>ServiceKnowledge</fullName>
    <active>true</active>
    <label>Service Knowledge</label>
</RecordType>