force-app/main/default/objects/Knowledge__kav/listViews/All_Articles.listView-meta.xml
<ListView>
    <fullName>All_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Procedure_Audience__c</columns>
    <columns>IS_CHANNEL_CSP</columns>
    <columns>IS_CHANNEL_PRM</columns>
    <columns>IS_CHANNEL_APP</columns>
    <columns>IS_CHANNEL_PKB</columns>
    <filterScope>Everything</filterScope>
    <label>All Articles</label>
</ListView>