force-app/main/default/objects/Knowledge__kav/listViews/IT_Agent_KB_Articles.listView-meta.xml
<ListView>
    <fullName>IT_Agent_KB_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>Innova_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>IT Agent KB Articles</label>
</ListView>